We are using mappers to interact with the OrderResource and the OrderDTO so that separation of concerns to be maintained and it makes it easier to maintain in future.