@@ -7,6 +7,7 @@ import com.example.entities.Cart;
 import com.example.entities.CartItem;
 import com.example.entities.Order;
 import com.example.entities.OrderItem;
+import com.example.dto.mappers.OrderMapper;
 
 import jakarta.ejb.Stateless;
 import jakarta.inject.Inject;
@@ -14,7 +15,6 @@ import jakarta.inject.Inject;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Stateless
 public class OrderService {
@@ -27,7 +27,7 @@ public class OrderService {
 
     private static final BigDecimal VAT_RATE = new BigDecimal("0.15");
 
-    /** Create order from a cart and return as DTO */
+    /** Create an order from a cart and return DTO */
     public OrderResponse createOrderFromCartDto(Long cartId) {
         Cart cart = cartDAO.findById(Cart.class, cartId);
         if (cart == null) {
@@ -40,38 +40,44 @@ public class OrderService {
             throw new IllegalStateException("Cart has already been checked out");
         }
 
-        BigDecimal totalWithoutVAT = cart.getItems().stream()
-                .map(ci -> ci.getProduct().getPrice()
-                        .multiply(BigDecimal.valueOf(ci.getQuantity())))
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-        BigDecimal totalWithVAT = totalWithoutVAT.add(totalWithoutVAT.multiply(VAT_RATE));
-
+        // Create new Order
         Order order = new Order();
         order.setCart(cart);
         order.setCustomer(cart.getCustomer());
         order.setStatus("NEW");
         order.setOrderDate(LocalDateTime.now());
-        order.setTotal(totalWithVAT);
 
+        // Map CartItems → OrderItems
+        BigDecimal totalWithoutVAT = BigDecimal.ZERO;
         for (CartItem ci : cart.getItems()) {
             OrderItem oi = new OrderItem();
             oi.setProduct(ci.getProduct());
             oi.setQuantity(ci.getQuantity());
             oi.setUnitPrice(ci.getProduct().getPrice());
+            oi.setOrder(order);
             order.addItem(oi);
+
+            totalWithoutVAT = totalWithoutVAT.add(
+                    ci.getProduct().getPrice().multiply(BigDecimal.valueOf(ci.getQuantity()))
+            );
         }
 
+        // Calculate total including VAT
+        BigDecimal totalWithVAT = totalWithoutVAT.add(totalWithoutVAT.multiply(VAT_RATE));
+        order.setTotal(totalWithVAT);
+
+        // Persist order
         orderDAO.save(order);
 
         // Update cart status
         cart.setStatus("CHECKED_OUT");
         cartDAO.update(cart);
 
-        return OrderResponse.fromEntity(order);
+        // Return DTO using mapper
+        return OrderMapper.toDto(order);
     }
 
-    /** Update order status and return as DTO */
+    /** Update order status and return DTO */
     public OrderResponse updateStatusDto(Long orderId, String status) {
         Order order = orderDAO.findById(Order.class, orderId);
         if (order == null) {
@@ -79,7 +85,7 @@ public class OrderService {
         }
         order.setStatus(status);
         orderDAO.update(order);
-        return OrderResponse.fromEntity(order);
+        return OrderMapper.toDto(order);
     }
 
     /** Get single order as DTO */
@@ -88,25 +94,23 @@ public class OrderService {
         if (order == null) {
             throw new IllegalArgumentException("Order not found");
         }
-        return OrderResponse.fromEntity(order);
+        return OrderMapper.toDto(order);
     }
 
     /** Get all orders as DTOs */
     public List<OrderResponse> getAllOrderDtos() {
         return orderDAO.findAll(Order.class).stream()
-                .map(OrderResponse::fromEntity)
-                .collect(Collectors.toList());
+                .map(OrderMapper::toDto)
+                .toList();
     }
 
     /** Get all orders for a specific customer as DTOs */
     public List<OrderResponse> getOrdersByCustomerDto(Long customerId) {
         return orderDAO.findAll(Order.class).stream()
-                .filter(o -> o.getCustomer() != null
-                        && o.getCustomer().getId().equals(customerId))
-                .map(OrderResponse::fromEntity)
-                .collect(Collectors.toList());
+                .filter(o -> o.getCustomer() != null && o.getCustomer().getId().equals(customerId))
+                .map(OrderMapper::toDto)
+                .toList();
     }
 }
-
 
 
